--- a/index.html
+++ b/index.html
@@ -14,75 +14,87 @@
       <header class="header__wrapper">
         <div class="container header__container">
           <div class="header__brand">
-            <img src="/index_files/ctpay-logo.svg" alt="Click to Pay" class="logo-ctp" />
-            <img src="/index_files/mc-symbol.png" alt="Mastercard" class="logo-mc" />
+            <img src="https://src.mastercard.com/profile/static/media/ctpay-logo-dark.3973aefa.svg" alt="Click to Pay" class="logo-ctp" />
+            <img src="https://src.mastercard.com/profile/static/media/mc-logo.4ad6e808.svg" alt="Mastercard" class="logo-mc" />
           </div>
           <nav class="header__nav">
             <a href="#" class="header__item">
               <span>US</span>
-              <span class="icon-globe">🌐</span>
+              <span class="icon-globe" style="color:#000">🌐</span>
             </a>
           </nav>
         </div>
       </header>
 
       <!-- MAIN -->
-      <main>
-        <div class="container">
-          <div class="headline">
-            <h1 class="display-lg color-orange-high">Click to Pay</h1>
-            <h2 class="display-lg">The fast, secure way to pay<br />online</h2>
+      <main class="container">
+        <div class="headline">
+          <h1 class="display-lg color-orange-high">Click to Pay</h1>
+          <h2 class="display-lg">The fast, secure way to pay<br />online</h2>
+        </div>
+
+        <form id="login-form" class="container-fluid" novalidate>
+          <p class="login-intro">Create a profile or sign in</p>
+          <div class="al-input floating">
+            <input
+              type="text"
+              id="userId"
+              name="userId"
+              placeholder="Email or mobile number"
+              class="al-input__input"
+              required
+  	      data-label="Email"
+            />
+	    <span class="al-input__dynamic-label hidden" id="inputLabel">Email</span>
+            <div class="al-input__subtext">
+              Click to Pay will use this information to verify you and may send verification codes to this number.
+              Message/data rates may apply.
+            </div>
+            <div class="al-input__error-icon">❗</div>
+            <div class="al-input__error-text hidden" id="error-required">This field is required</div>
+            <div class="al-input__error-text hidden" id="error-format">Confirm your email and try again</div>
           </div>
-
-          <form id="login-form" class="container-fluid" novalidate>
-            <div class="row">
-              <div class="col-full">
-                <p>Create a profile or sign in</p>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col">
-                <div class="al-input floating">
-                  <input
-                    type="text"
-                    id="userId"
-                    name="userId"
-                    placeholder=" "
-                    class="al-input__input"
-                    required
-                  />
-                  <label for="userId" class="al-input__label">Email or mobile number</label>
-                  <div class="al-input__subtext">
-                    Click to Pay will use this information to verify you and may send verification codes to this number.
-                    <br />Message/data rates may apply.
-                  </div>
-                  <div class="al-input__error-icon">❗</div>
-                  <div class="al-input__error-text hidden" id="error-required">This field is required</div>
-                  <div class="al-input__error-text hidden" id="error-format">Confirm your email and try again</div>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-
-        <!-- BUTTON -->
-        <div class="al-button container">
-          <button type="submit" id="submit-btn" class="uppercase fill" aria-label="Continue" disabled>
-            <span class="al-button__label">CONTINUE</span>
-          </button>
-        </div>
-
-        <!-- LEGAL LINKS -->
-        <div class="container legal-links">
-          <a href="#" class="legal-link">TERMS</a>
-          <a href="#" class="legal-link">PRIVACY</a>
-          <a href="#" class="legal-link">COOKIES</a>
-          <a href="#" class="legal-link">FEEDBACK</a>
-        </div>
+        </form>
       </main>
+
+      <!-- BUTTON -->
+      <div class="al-button container fixed-bottom">
+        <button type="submit" id="submit-btn" class="uppercase fill" aria-label="Continue" disabled>
+          <span class="al-button__label">CONTINUE</span>
+        </button>
+      </div>
+
+      <!-- LEGAL LINKS -->
+      <footer class="container legal-links fixed-bottom-links">
+        <a href="#" class="legal-link">TERMS</a>
+        <a href="#" class="legal-link">PRIVACY</a>
+        <a href="#" class="legal-link">COOKIES</a>
+        <a href="#" class="legal-link">FEEDBACK</a>
+      </footer>
     </div>
 
     <script type="module" src="/src/main.js"></script>
+    <script>
+      const input = document.getElementById('userId');
+      const label = document.getElementById('inputLabel');
+      const errorRequired = document.getElementById('error-required');
+
+      input.addEventListener('focus', () => {
+        input.placeholder = 'Email';
+        label.classList.remove('error');
+      });
+
+      input.addEventListener('blur', () => {
+        if (!input.value.trim()) {
+          label.classList.add('error');
+          errorRequired.classList.remove('hidden');
+        } else {
+          label.classList.remove('error');
+          errorRequired.classList.add('hidden');
+        }
+        input.placeholder = 'Email or mobile number';
+      });
+    </script>
+
   </body>
 </html>
