--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
           />
           <div class="al-input__error-icon">❗</div>
         </div>
-
         <div class="al-input__messages">
-          <div id="error-password" class="al-input__error-text hidden">Password must be at least 8 characters.</div>
+          <div id="error-password" class="al-input__error-text hidden">
+            Password must be at least 8 characters.
+          </div>
         </div>
       </div>
 
