--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <!-- Submit button -->
     <div class="al-button container fixed-bottom">
-      <button type="submit" id="submit-btn" class="uppercase fill" aria-label="Continue" disabled>
+      <button type="submit" id="submit-btn" class="al-button uppercase fill" aria-label="Continue" disabled>
         <span class="al-button__label">CONTINUE</span>
       </button>
     </div>
